--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-
-[tool.poetry.group.dev.dependencies]
 pandas = "2.2.3"
 boto3 = "1.35.34"
 python-dotenv = "1.0.0"
-
+python-telegram-bot = "21.6"
 
 [build-system]
 requires = ["poetry-core"]
