--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
               run: echo "${{ secrets.YC_OAUTH_TOKEN }}" | docker login --username oauth --password-stdin cr.yandex
 
             - name: Build Docker image
-              run: docker build -t cr.yandex/${{ secrets.YC_REGISTRY_ID }}//${{ github.repository }}:${{ github.sha }} .
+              run: docker build -t cr.yandex/${{ secrets.YC_REGISTRY_ID }}//${{ github.event.repository.name }}:${{ github.sha }} .
 
             - name: Push Docker image to the Registry
-              run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.repository }}:${{ github.sha }}
+              run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ github.sha }}
