--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,13 @@ jobs:
             - name: Checkout repository
               uses: actions/checkout@v4
 
+            - name: Create .env file
+              run: |
+                  echo "YC_ADMIN_SA_ACCESS_KEY=${{ secrets.YC_ADMIN_SA_ACCESS_KEY }}" >> .env
+                  echo "YC_ADMIN_SA_SECRET_KEY=${{ secrets.YC_ADMIN_SA_SECRET_KEY }}" >> .env
+                  echo "TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }}" >> .env
+                  echo "BUCKET=${{ secrets.BUCKET }}" >> .env
+
             - name: Log in to the Registry
               run: echo "${{ secrets.YC_OAUTH_TOKEN }}" | docker login --username oauth --password-stdin cr.yandex
 
