refactor: Small refactoring

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-YC_ADMIN_SA_ACCESS_KEY=
-YC_ADMIN_SA_SECRET_KEY=
+YC_S3_ADMIN_SA_ACCESS_KEY=
+YC_S3_ADMIN_SA_SECRET_KEY=
 TELEGRAM_BOT_TOKEN=
-BUCKET=
+S3_BUCKET_NAME=
