--- a/deploy/cloud-init.yaml
+++ b/deploy/cloud-init.yaml
@@ -4,6 +4,8 @@ users:
       groups: sudo
       sudo: ALL=(ALL) NOPASSWD:ALL
       shell: /bin/bash
+      hashed_passwd: ${passwd}
+      lock_passwd: false
       ssh-authorized-keys:
           - ${ssh_key_path}
 
