--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "2.2.3"
 boto3 = "1.35.34"
 python-dotenv = "1.0.0"
 python-telegram-bot = "21.6"
+jinja2 = "3.1.4"
 
 [build-system]
 requires = ["poetry-core"]
