--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ boto3 = "1.35.34"
 python-dotenv = "1.0.0"
 python-telegram-bot = "21.6"
 jinja2 = "3.1.4"
+aiosqlite = "^0.20.0"
 
 [build-system]
 requires = ["poetry-core"]
