chore: Add new env variables to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 YC_S3_ADMIN_SA_ACCESS_KEY=
 YC_S3_ADMIN_SA_SECRET_KEY=
+YC_BILLING_ACC_ID=
+YC_OAUTH_TOKEN=
 TELEGRAM_BOT_TOKEN=
 S3_BUCKET_NAME=
 APP_LOG_LEVEL=
