--- a/deploy/.envrc
+++ b/deploy/.envrc
@@ -1,5 +1,4 @@
-#!/bin/bash
-
+# vim: set filetype=sh:
 # Set required environment variables.
 export YC_IAM_TOKEN=$(yc iam create-token)
 export YC_CLOUD_ID=$(yc config get cloud-id)
