--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,48 +8,68 @@ on:
             - "*"
 
 jobs:
+    build-and-push:
+        runs-on: ubuntu-22.04
+        outputs:
+            image: ${{ steps.metadata.outputs.image }}
+            tag: ${{ steps.metadata.outputs.tag }}
+
+        steps:
+            - name: Checkout Repository
+              uses: actions/checkout@v4
+
+            - name: Extract Metadata
+              id: metadata
+              run: |
+                  echo "image=cr.yandex/${{ vars.YC_REGISTRY_ID }}/${{ github.event.repository.name }}" >> $GITHUB_OUTPUT
+                  echo "tag=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
+
+            - name: Generate .env file
+              run: |
+                  cat << EOF > .env
+                  YC_S3_ADMIN_SA_ACCESS_KEY=${{ secrets.YC_S3_ADMIN_SA_ACCESS_KEY }}
+                  YC_S3_ADMIN_SA_SECRET_KEY=${{ secrets.YC_S3_ADMIN_SA_SECRET_KEY }}
+                  YC_OAUTH_TOKEN=${{ secrets.YC_OAUTH_TOKEN }}
+                  YC_BILLING_ACC_ID=${{ secrets.YC_BILLING_ACC_ID }}
+                  TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }}
+                  S3_BUCKET_NAME=${{ vars.S3_BUCKET_NAME }}
+                  APP_LOG_LEVEL=${{ vars.APP_LOG_LEVEL }}
+                  EOF
+
+            - name: Log in to the Yandex Cloud Container Registry
+              uses: docker/login-action@v3
+              with:
+                  registry: cr.yandex
+                  username: oauth
+                  password: ${{ secrets.YC_OAUTH_TOKEN }}
+
+            - name: Build and push Docker image
+              uses: docker/build-push-action@v6
+              with:
+                  file: ./Dockerfile
+                  context: .
+                  push: true
+                  tags: |
+                      ${{ steps.metadata.outputs.image }}:${{ steps.metadata.outputs.tag }}
+
     deploy:
+        needs: [build-and-push]
         runs-on: ubuntu-22.04
 
         steps:
             - name: Checkout Repository
               uses: actions/checkout@v4
 
-            - name: Extract Git Tag
-              id: extract_tag
-              run: echo "TAG=${GITHUB_REF##*/}" >> $GITHUB_ENV
-
-            - name: Generate .env file
-              run: |
-                  echo "YC_S3_ADMIN_SA_ACCESS_KEY=${{ secrets.YC_S3_ADMIN_SA_ACCESS_KEY }}" >> .env
-                  echo "YC_S3_ADMIN_SA_SECRET_KEY=${{ secrets.YC_S3_ADMIN_SA_SECRET_KEY }}" >> .env
-                  echo "YC_OAUTH_TOKEN=${{ secrets.YC_OAUTH_TOKEN }}" >> .env
-                  echo "YC_BILLING_ACC_ID=${{ secrets.YC_BILLING_ACC_ID }}" >> .env
-                  echo "TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }}" >> .env
-                  echo "S3_BUCKET_NAME=${{ vars.S3_BUCKET_NAME }}" >> .env
-                  echo "APP_LOG_LEVEL=${{ vars.APP_LOG_LEVEL }}" >> .env
-
-            - name: Log docker in to the Yandex Cloud Registry
-              run: echo "${{ secrets.YC_OAUTH_TOKEN }}" | docker login --username oauth --password-stdin cr.yandex
-
-            - name: Build Docker image
-              run: docker build -q -t cr.yandex/${{ secrets.YC_REGISTRY_ID }}/${{ github.event.repository.name }}:${{ env.TAG }} .
-
-            - name: Push Docker image to the Registry
-              run: docker push -q cr.yandex/${{ secrets.YC_REGISTRY_ID }}/${{ github.event.repository.name }}:${{ env.TAG }}
-
-            - name: Configure SSH
-              run: |
-                  mkdir -p ~/.ssh/
-                  echo "${{ secrets.YC_SSH_KEY }}" > ~/.ssh/id_rsa
-                  chmod 600 ~/.ssh/id_rsa
-                  echo "Host target-compute-intance" >> ~/.ssh/config
-                  echo "  HostName ${{ vars.YC_COMPUTE_EXT_IP }}" >> ~/.ssh/config
-                  echo "  User ${{ vars.YC_COMPUTE_USER }}" >> ~/.ssh/config
-                  echo "  IdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
-                  echo "  StrictHostKeyChecking no" >> ~/.ssh/config
-
-            - name: Run new Docker image
-              run: |
-                  ssh target-compute-intance 'if [ "$(docker ps -q -f name=${{ github.event.repository.name }})" ]; then docker stop ${{ github.event.repository.name }}; fi'
-                  ssh target-compute-intance 'docker run -d -q --rm --name=${{ github.event.repository.name }} -v bot-logs:/app/logs cr.yandex/${{ secrets.YC_REGISTRY_ID }}/${{ github.event.repository.name }}:${{ env.TAG }}'
+            # https://github.com/marketplace/actions/docker-stack-deploy-action
+            - name: Deploy Docker Stack
+              uses: kitconcept/docker-stack-deploy@v1.2.0
+              with:
+                  registry: cr.yandex
+                  username: oauth
+                  password: ${{ secrets.YC_OAUTH_TOKEN }}
+                  remote_host: ${{ vars.YC_COMPUTE_HOST }}
+                  remote_user: ${{ vars.YC_COMPUTE_USER }}
+                  remote_private_key: ${{ secrets.YC_SSH_KEY }}
+                  stack_file: ./compose.yaml
+                  stack_name: bot
+                  env_file: IMAGE=${{ needs.build-and-push.outputs.image }}:${{ needs.build-and-push.outputs.tag }}
