--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,25 +24,25 @@ jobs:
                   echo "image=cr.yandex/${{ vars.YC_REGISTRY_ID }}/${{ github.event.repository.name }}" >> $GITHUB_OUTPUT
                   echo "tag=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
 
-            - name: Generate .env file
+            - name: Generate required files
               run: |
                   cat << EOF > .env
-                  YC_S3_ADMIN_SA_ACCESS_KEY=${{ secrets.YC_S3_ADMIN_SA_ACCESS_KEY }}
-                  YC_S3_ADMIN_SA_SECRET_KEY=${{ secrets.YC_S3_ADMIN_SA_SECRET_KEY }}
-                  YC_OAUTH_TOKEN=${{ secrets.YC_OAUTH_TOKEN }}
+                  YC_S3_ACCESS_KEY=${{ secrets.YC_S3_ACCESS_KEY }}
+                  YC_S3_SECRET_KEY=${{ secrets.YC_S3_SECRET_KEY }}
                   YC_BILLING_ACC_ID=${{ secrets.YC_BILLING_ACC_ID }}
                   TELEGRAM_BOT_TOKEN=${{ secrets.TELEGRAM_BOT_TOKEN }}
                   S3_BUCKET_NAME=${{ vars.S3_BUCKET_NAME }}
                   AUTH_USERS=${{ secrets.AUTH_USERS }}
                   APP_LOG_LEVEL=${{ vars.APP_LOG_LEVEL }}
                   EOF
+                  cat ${{ secrets.YC_BILLING_SA_AUTH_JSON }} > .yc-sa-auth.json
 
             - name: Log in to the Yandex Cloud Container Registry
               uses: docker/login-action@v3
               with:
                   registry: cr.yandex
-                  username: oauth
-                  password: ${{ secrets.YC_OAUTH_TOKEN }}
+                  username: json_key
+                  password: ${{ secrets.YC_CR_SA_AUTH_JSON }}
 
             - name: Build and push Docker image
               uses: docker/build-push-action@v6
@@ -61,13 +61,12 @@ jobs:
             - name: Checkout Repository
               uses: actions/checkout@v4
 
-            # https://github.com/marketplace/actions/docker-stack-deploy-action
             - name: Deploy Docker Stack
-              uses: kitconcept/docker-stack-deploy@v1.2.0
+              uses: leonidgrishenkov/docker-stack-deploy@v1.2.4
               with:
                   registry: cr.yandex
-                  username: oauth
-                  password: ${{ secrets.YC_OAUTH_TOKEN }}
+                  username: json_key
+                  password: ${{ secrets.YC_CR_SA_AUTH_JSON }}
                   remote_host: ${{ vars.YC_COMPUTE_HOST }}
                   remote_user: ${{ vars.YC_COMPUTE_USER }}
                   remote_private_key: ${{ secrets.YC_SSH_KEY }}
