--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "yandex-cloud-billing-analysis-bot"
 version = "1.4.3"
 description = ""
 readme = "README.md"
-requires-python = "==3.12.5"
+requires-python = "==3.13.1"
 dependencies = [
     "pandas==2.2.3",
     "boto3==1.35.34",
@@ -11,6 +11,9 @@ dependencies = [
     "python-telegram-bot==21.6",
     "jinja2==3.1.4",
     "requests==2.32.3",
+    "pyjwt==2.10.1",
+    "cryptography==44.0.0",
+    "pydantic==2.10.5",
 ]
 
 [dependency-groups]
